Fix GLOutputSurface::GetFramebufferCopyTextureFormat().

The implementation needs to check if there is an alpha channel and
return RGBA instead of RGB. This matches the current implementation in
GpuBrowserCompositorOutputSurface and AndroidOutputSurface.

Bug: 893700
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: Icebee5be36720565f989a03460aa078c50668dc6
Reviewed-on: https://chromium-review.googlesource.com/c/1271517
Reviewed-by: Eric Karl <ericrk@chromium.org>
Commit-Queue: kylechar <kylechar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598159}
Former-commit-id: dbc925c5f7f8aef6a11f072bc10331c427625a4a